# security-deepagent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  开发任务清单.md  项目介绍.txt
backend/: README.md  pyproject.toml
backend/src/security_agent/: __init__.py  app.py  config.py  schemas.py
backend/src/security_agent/adapters/: __init__.py  local.py  protocols.py
backend/src/security_agent/agents/: __init__.py  models.py  registry.py  skills.py
backend/src/security_agent/api/: alarms.py  chat.py  devices.py  health.py  reviews.py  threads.py
backend/src/security_agent/harness/: __init__.py  context.py  factory.py  handoff.py  intent.py  interrupts.py  models.py  persistence.py  pipeline.py  risk.py  runtime.py  service.py
backend/src/security_agent/services/: __init__.py  readiness.py
backend/src/security_agent/stores/: __init__.py  factory.py  memory.py  models.py  protocols.py
backend/src/security_agent/stores/milvus/: __init__.py  collections.py
backend/src/security_agent/stores/postgres/: __init__.py  init.py  schema.py  schema.sql
backend/src/security_agent/stores/redis/: __init__.py  session.py
backend/src/security_agent/tools/: __init__.py  builtin.py  models.py  registry.py
backend/tests/: test_agents.py  test_api_skeleton.py  test_handoff.py  test_harness.py  test_interrupts.py  test_stores.py  test_tools_runtime.py
config/: agents.yaml  settings.yaml  subagents.yaml
deploy/: .env.cn.example  .env.example  docker-compose.yml  reset_milvus.sh
docs/: 00_总体架构设计.md  01_后端API设计.md  02_Harness驾驭层设计.md  03_数据存储设计.md  design.md  (+8 more)
(+56 files in other folders)
