[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-deepagent-practice"
version = "0.1.0"
description = "Local lightweight production system for security DeepAgents."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

